examples/src/styles.css
/* You can add global styles to this file, and also import other style files */

body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
.mat-mdc-header-cell{
  border-top: 1px solid rgba(0,0,0,.12)!important;
  border-right: 1px solid rgba(0,0,0,.12)!important;
}
.opDialog .mat-mdc-dialog-container .mdc-dialog__surface{
  padding: 1rem;
  background-color: white;
}

